# diction

./: .gitignore  1. Zero-Copy Cache.txt  INSTALL_fedora_silverblue.txt  Piper-TTS-Voice-Generator.sh  README.md  Todo.txt  dump_header  install.sh  meson.build  patch_search.py  patch_utf16.py  patch_utf8.py  ster_prefix_raw.html  ster_raw.html  ster_raw_html.txt  test_dict  test_dict.c  todo_aqueel.txt
Todo Related/: Todo_goldendict_related.txt  ui-css-related.txt
data/: io.github.fastrizwaan.diction.desktop  io.github.fastrizwaan.diction.metainfo.xml  io.github.fastrizwaan.diction.service
flatpak/: install.sh  io.github.fastrizwaan.diction.yaml
helpers/: get_ipa.py
scratch/: dump_sdict_header.c
src/: audio-playback.c  audio-playback.h  dict-bgl.c  dict-cache-builder.c  dict-cache-builder.h  dict-cache.c  dict-cache.h  dict-chunked.c  dict-chunked.h  dict-dictd.c  dict-dsl-index.c  dict-dsl-index.h  dict-dsl-scanner.c  dict-dsl-scanner.h  dict-dsl.c  dict-idx.c  dict-idx.h  dict-ifo.c  dict-loader.c  dict-loader.h  dict-lsd.c  dict-mdx.c  dict-mmap.c  dict-mmap.h  dict-render.c  dict-render.h  dict-sdict.c  dict-slob.c  dict-stardict-render.c  dict-xdxf.c  dictzip.c  dictzip.h  dsl-render.c  dsl-render.h  flat-index.c  flat-index.h  global-shortcut.c  global-shortcut.h  json-theme.c  langpair.c  (+26 more)
xdxf/dsl2xdxf-0.2.5b/: ChangeLog  README_dsl2xdxf_translation.mht  Readme.rtf  dsl2xdxf.py
xdxf/xdxf-samples/: convert.sh  download_home.sh  download_home_male_voice.sh  rev33.xdxf  rev34.xdxf  sounds_of_words.opus
xdxf_samples/: ithkuil.xdxf
(+3 files in other folders)
